[build-system]
requires = ["setuptools>=61.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.setuptools.dynamic]
version = {attr = "sploitkit.__info__.__version__"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.txt"]

[project]
name = "sploitkit"
authors = [
  {name="Alexandre D'Hondt", email="alexandre.dhondt@gmail.com"},
]
description = "Devkit for easilly building Metasploit-like framework consoles"
license = {file = "LICENSE"}
keywords = ["python", "development", "programming", "cli", "framework", "console", "devkit"]
requires-python = ">=3.8,<4"
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "peewee>=3.17.6",
  "prompt_toolkit>=3.0.47",
  "requests",
  "tinyscript>=1.30.15",
]
dynamic = ["version"]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
documentation = "https://python-sploitkit.readthedocs.io/en/latest/?badge=latest"
homepage = "https://github.com/dhondta/python-sploitkit"
issues = "https://github.com/dhondta/python-sploitkit/issues"
repository = "https://github.com/dhondta/python-sploitkit"

[project.scripts]
sploitkit = "sploitkit.__main__:main"
