[metadata]
name = sploitkit
version = file: sploitkit/VERSION.txt
author = Alexandre D'Hondt
author-email = alexandre.dhondt@gmail.com
home-page = https://github.com/dhondta/sploitkit
description = Toolkit for easilly building Metasploit-like framework consoles
long_description = file: README.md
long_description_content_type = text/markdown
keywords =
    python
    development
    programming
    cli
    framework
    console
    toolkit
license = AGPLv3
license-file = LICENSE
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:
scripts =
    bin/sploitkit-new
include_package_data = False
install_requires =
    asciistuff
    ipaddress
    pathlib
    peewee
    Pillow
    prompt_toolkit
    pyfiglet
    pyminizip
    requests
    termcolor
    terminaltables
    tinyscript
setup-requires = setuptools
python-requires = >=3.5,<4

[options.package_data]
* = *.txt
