[metadata]
name = sploitkit
version = file: sploitkit/VERSION.txt
author = Alexandre D'Hondt
author-email = alexandre.dhondt@gmail.com
home-page = https://github.com/dhondta/python-sploitkit
description = Toolkit for easilly building Metasploit-like framework consoles
long_description = file: README.md
long_description_content_type = text/markdown
keywords =
    python
    development
    programming
    cli
    framework
    console
    devkit
license = AGPLv3
license-file = LICENSE
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:
include_package_data = False
install_requires =
    peewee
    prompt_toolkit
    requests
    tinyscript>=1.23.17
setup-requires = setuptools
python-requires = >=3.6,<4

[options.package_data]
* = *.txt

[options.entry_points]
console_scripts =
    sploitkit = sploitkit.__main__:main
